# HW8_Python1

./: README.md  birthday.py  pyproject.toml  setup.cfg  users.txt
birthday_folder/: birthday-1.py  birthday.py
