[metadata]
name = birthday
version = 0.1.0
author = Rostyslav Bysko
author_email = brn.h74@gmail.com
url = https://github.com/RostislavB74/HW8_Pyton1
description = Employee birthday reminder 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = birthday, birthday_folder, setuptools
license =  Apache License
classifiers =
    License :: Version 2.0, January 2004
    Programming Language :: Python :: 3

[options]
packages = find:
    

[options.entry_points]
console_scripts = 
    clean = birthday_folder.birthday:main